# aoc-2022

./: Cargo.toml
days/1/: Cargo.toml
days/1/src/: main.rs
days/2/: Cargo.toml
days/2/src/: main.rs
days/3/: Cargo.toml
days/3/src/: main.rs
days/4/: Cargo.toml
days/4/src/: main.rs
days/5/: Cargo.toml
days/5/src/: main.rs
days/6/: Cargo.toml
days/6/src/: main.rs
days/7/: Cargo.toml
days/7/src/: main.rs
days/8/: Cargo.toml
days/8/src/: main.rs
