[package]
name = "Advent-of-Code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = [
    "std",
    "cargo",
    "help",
    "derive",
    "suggestions",
] }
nom = { version = "7.1.1", features = ["alloc"] }
ibig = "0.3.6"
rayon = "1.6.1"
tui = "0.19.0"
crossterm = "0.25"
pathfinding = "4.0.1"
